<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">AutoNet</string>
    <string name="copyright" translatable="false">©2023 Galacticai</string>
    <string name="app_description">With the power of root, AutoNet can enable and disable USB tethering on modern devices.</string>
    <string name="usb_detection_service_process" translatable="false">:usb_detection_service</string>
    <string name="enable_service">Enable Service</string>
    <string name="service_status_label_enabled">Tethering will be automatically enabled when USB is connected.</string>
    <string name="service_status_label_disabled">Nothing will happen when USB is connected.</string>
    <string name="service_status_title">Service status:</string>
    <string name="battery_optimization_warning">Battery optimization could prevent AutoNet from running in the background. Please disable it if you want the complete experience.</string>
    <string name="ok">OK</string>
    <string name="starting_service">Starting service…</string>
    <string name="enabling_usb_tethering">Enabling USB Tethering…</string>
    <string name="service">Service</string>
    <string name="enable_notification">Enable notification?</string>
    <string name="notification_dialog_text">The persistent notification ensures that AutoNet won\'t be killed by the system</string>
    <string name="battery_optimization_detected">Battery optimization detected!</string>
    <string name="not_recommended">not recommended</string>
    <string name="skip">Skip</string>
    <string name="enable">Enable</string>
    <string name="root_required">Root required</string>
    <string name="root_dialog_text">Root is required to automatically enable USB tethering.</string>

</resources>